--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         </audio>
         <div class="header-content">
-            <img src="assets/images/banner/logo.svg" alt="Imagem pincipal">
+            <img class="invert-element" src="assets/images/banner/logo.svg" alt="Imagem pincipal">
             <p class="invert-element" role="text">
                 Uma jornada para quem não tem medo do desconhecido. O caminho para o Mundo invertido é incerto, repleto de obstáculos e perigos. Porém, a recompensa é grande: salvar Hawkings e o mundo todo das garras de Vecna. Você está preparado? Então clique no botão abaixo para entrar no Mundo Invertido!
             </p>
